jenkins_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: jenkins
spec:
  replicas: 2  # Start with 1 and use Horizontal Pod Autoscaler for autoscaling
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      securityContext:
        fsGroup: 1000  # Ensures the Jenkins process can write to /var/jenkins_home
      containers:
      - name: myapp
        image: jenkins/jenkins:lts
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "2Gi"
            cpu: "1"
          limits:
            memory: "4Gi"
            cpu: "2"
        volumeMounts:
        - mountPath: /var/jenkins_home
          name: jenkins-data
      volumes:
      - name: jenkins-data
        persistentVolumeClaim:
          claimName: jenkinspvc  # This should match the  name of your  PVC
