jenkins_service.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: jenkins
spec:
  selector:
    app: myapp
  type: LoadBalancer
  sessionAffinity: ClientIP 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
